<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="Bluetooth Proxy">
        <SwitchPreferenceCompat
            app:key="@string/settings_enabled"
            app:defaultValue="@string/settings_enabled_def"
            app:title="Scan enabled"/>
        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            app:key="@string/settings_webhook"
            app:defaultValue="@string/settings_webhook_def"
            app:title="Home Assistant webhook"/>
        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            app:key="@string/settings_unique_events_devices_names"
            app:defaultValue="@string/settings_unique_events_devices_names_def"
            app:title="Devices names having unique events (split by comma)"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="Scan Intervals" app:key="cat_intervals">
        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/settings_scan_duration_def"
            app:key="@string/settings_scan_duration"
            app:title="Scan duration (seconds)"/>
        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/settings_scan_interval_def"
            app:key="@string/settings_scan_interval"
            app:title="Scan interval (seconds)"/>
        <EditTextPreference
            app:useSimpleSummaryProvider="true"
            app:defaultValue="@string/settings_upload_inteval_def"
            app:key="@string/settings_upload_inteval"
            app:title="Data upload interval (seconds)"/>
    </PreferenceCategory>
</PreferenceScreen>